# TicTacToe

./: work.docx  ~$work.docx
java_c_tcp/: C++ Client to a Java Server(TCP_IP) - Stack Overflow.mhtml  How to setup static ip on Ubuntu Server 18.04 in VMWare Workstation 14 - Ask Ubuntu.mhtml  Network Communication between a java socket (server) and a C++ socket (client) - Stack Overflow.mhtml  Sending a message via TCP Socket between C++ and Java - Stack Overflow.mhtml  TCP Java client sending Data to a C++ Server - Stack Overflow.mhtml  c++ - connecting to an IP address instead of localhost_ - Stack Overflow.mhtml  networking - Setting up a static Ip on Ubuntu 16 server inside a VMWare Workstation - Ask Ubuntu.mhtml
result/server/: a.out  server.cpp
result/ups_my/src/: Form.java  GameField.java  Network.java  SelectingRoom.java  Settings.java  TicTacToe.java  global.java
result/ups_my1/src/: Form.java  GameField.java  MainClass.java  Network.java  Player.java  SelectingRoom.java  Settings.java  global.java
server/: CMakeLists.txt  server.cpp
tcpserver/: C++ Event driven TCP socket server (multi client, single threaded) · GitHub.mhtml  Handling multiple clients on server with multithreading using Socket Programming in C_C++ - GeeksforGeeks.mhtml  Single Server With Multiple Clients_ A Simple C++ Implementation - CodeProject.mhtml  one server multiple clients C++ example (TCP) · GitHub.mhtml  sockets - C++ Multi-Client TCP Server - Stack Overflow.mhtml
ups_my/src/: Form.java  GameField.java  Network.java  Settings.java  TicTacToe.java
(+1 files in other folders)
